# mfa-moe

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_docker.sh  run_experiment0a.sh  run_pipeline.sh
report/: main.tex
report/paper_figures/: generate_figures.py
src/common/gepa_optimization/: README.md  gepa_optimize_prompt.py  requirements.txt  run.sh
src/common/gepa_optimization/config/: gepa_config.yaml
src/common/gepa_optimization/core/: dataset_handler.py  le_evaluator.py  metrics.py  template_handler.py  utils.py
src/common/gepa_optimization/solver/: P9_formula.py  fol_formula.py  fol_parser.py  logic_evaluator.py
src/common/gepa_optimization/templates/qwen3_4B/: gepa_uni_logic_answer.yaml  uni_logic_answer.yaml
src/common/llamacpp/: README.md  generate_llamacpp.py  serve_llamacpp.sh  serve_qwen3_4b_instruct_2507.sh
src/common/src_prompt_optimization/: .env.example  README.md  deploy_vllm_model.sh  requirements.txt  run_gepa_qa_optimization.py  run_single_vllm_gepa.sh  stop_vllm_model.sh
src/moe_exp/: schemas.py  utils.py
src/moe_exp/analysis/: classifier.py  event_routing.py  linear_probe.py  recompute_metrics.py  relabel_traces.py  step_splitter.py  structure_probe.py  summarize_taxonomy.py
src/moe_exp/datasets/: loaders.py
src/moe_exp/experiment0a/: README.md  __init__.py  audit.py  data.py  metrics.py  prompts.py  run.py  run_gepa.sh
src/moe_exp/experiment1/: run.py  taxonomy.py
src/moe_exp/experiment2/: run.py
src/moe_exp/experiment3/: __init__.py  run.py
src/moe_exp/experiment4/: __init__.py  run.py
src/moe_exp/experiment5/: run.py
src/moe_exp/models/: inference.py  loader.py
tests/: test_empty_pipeline_inputs.py  test_experiment0a.py  test_experiment4.py
