[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moe-experiments"
version = "0.1.0"
description = "MoE routing dynamics during CoT reasoning — experiments"
requires-python = ">=3.11"
dependencies = [
    # torch is intentionally excluded here — install with CUDA support first:
    #   pip install torch --index-url https://download.pytorch.org/whl/cu128
    "transformers>=4.44.0",
    "accelerate>=0.30.0",
    "datasets>=2.20.0",
    "tokenizers>=0.19.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "jsonlines>=4.0.0",
    "huggingface-hub>=0.24.0",
    "bitsandbytes>=0.46.1",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
exp0a = "moe_exp.experiment0a.run:main"
exp0a-audit = "moe_exp.experiment0a.audit:main"
exp1 = "moe_exp.experiment1.run:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
exp0a = [
    "dspy>=3.0.0,<4",
    "gepa>=0.0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/moe_exp"]

[tool.ruff]
line-length = 100
target-version = "py311"
